[bug] cookies modal buttons are too small

--- a/app/frontend/src/stylesheets/modules/cookies.scss
+++ b/app/frontend/src/stylesheets/modules/cookies.scss
@@ -14,6 +14,7 @@
 
   .cookies-actions {
     display: flex;
+    height: 45px;
 
     button {
       flex-basis: 50%;
